implemented pending and answered lists
